gen/AldebaranParser.java
// Generated from C:/Users/laj/Documents/GitHub/ModelChecker\Aldebaran.g4 by ANTLR 4.5.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AldebaranParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, NUMBER=7, STRING=8, WHITESPACE=9;
	public static final int
		RULE_kripkestructure = 0, RULE_aut_header = 1, RULE_first_state = 2, RULE_nr_of_transitions = 3, 
		RULE_nr_of_states = 4, RULE_aut_edge = 5, RULE_start_state = 6, RULE_label = 7, 
		RULE_end_state = 8;
	public static final String[] ruleNames = {
		"kripkestructure", "aut_header", "first_state", "nr_of_transitions", "nr_of_states", 
		"aut_edge", "start_state", "label", "end_state"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'des ('", "','", "')'", "'('", "',\"'", "'\",'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, "NUMBER", "STRING", "WHITESPACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Aldebaran.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AldebaranParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class KripkestructureContext extends ParserRuleContext {
		public Aut_headerContext aut_header() {
			return getRuleContext(Aut_headerContext.class,0);
		}
		public List<Aut_edgeContext> aut_edge() {
			return getRuleContexts(Aut_edgeContext.class);
		}
		public Aut_edgeContext aut_edge(int i) {
			return getRuleContext(Aut_edgeContext.class,i);
		}
		public KripkestructureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kripkestructure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AldebaranListener ) ((AldebaranListener)listener).enterKripkestructure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AldebaranListener ) ((AldebaranListener)listener).exitKripkestructure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AldebaranVisitor ) return ((AldebaranVisitor<? extends T>)visitor).visitKripkestructure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KripkestructureContext kripkestructure() throws RecognitionException {
		KripkestructureContext _localctx = new KripkestructureContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_kripkestructure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(18);
			aut_header();
			setState(22);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(19);
				aut_edge();
				}
				}
				setState(24);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Aut_headerContext extends ParserRuleContext {
		public First_stateContext first_state() {
			return getRuleContext(First_stateContext.class,0);
		}
		public Nr_of_transitionsContext nr_of_transitions() {
			return getRuleContext(Nr_of_transitionsContext.class,0);
		}
		public Nr_of_statesContext nr_of_states() {
			return getRuleContext(Nr_of_statesContext.class,0);
		}
		public Aut_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aut_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AldebaranListener ) ((AldebaranListener)listener).enterAut_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AldebaranListener ) ((AldebaranListener)listener).exitAut_header(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AldebaranVisitor ) return ((AldebaranVisitor<? extends T>)visitor).visitAut_header(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Aut_headerContext aut_header() throws RecognitionException {
		Aut_headerContext _localctx = new Aut_headerContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_aut_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25);
			match(T__0);
			setState(26);
			first_state();
			setState(27);
			match(T__1);
			setState(28);
			nr_of_transitions();
			setState(29);
			match(T__1);
			setState(30);
			nr_of_states();
			setState(31);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class First_stateContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(AldebaranParser.NUMBER, 0); }
		public First_stateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_first_state; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AldebaranListener ) ((AldebaranListener)listener).enterFirst_state(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AldebaranListener ) ((AldebaranListener)listener).exitFirst_state(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AldebaranVisitor ) return ((AldebaranVisitor<? extends T>)visitor).visitFirst_state(this);
			else return visitor.visitChildren(this);
		}
	}

	public final First_stateContext first_state() throws RecognitionException {
		First_stateContext _localctx = new First_stateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_first_state);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Nr_of_transitionsContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(AldebaranParser.NUMBER, 0); }
		public Nr_of_transitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nr_of_transitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AldebaranListener ) ((AldebaranListener)listener).enterNr_of_transitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AldebaranListener ) ((AldebaranListener)listener).exitNr_of_transitions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AldebaranVisitor ) return ((AldebaranVisitor<? extends T>)visitor).visitNr_of_transitions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Nr_of_transitionsContext nr_of_transitions() throws RecognitionException {
		Nr_of_transitionsContext _localctx = new Nr_of_transitionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_nr_of_transitions);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Nr_of_statesContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(AldebaranParser.NUMBER, 0); }
		public Nr_of_statesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nr_of_states; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AldebaranListener ) ((AldebaranListener)listener).enterNr_of_states(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AldebaranListener ) ((AldebaranListener)listener).exitNr_of_states(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AldebaranVisitor ) return ((AldebaranVisitor<? extends T>)visitor).visitNr_of_states(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Nr_of_statesContext nr_of_states() throws RecognitionException {
		Nr_of_statesContext _localctx = new Nr_of_statesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_nr_of_states);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Aut_edgeContext extends ParserRuleContext {
		public Start_stateContext start_state() {
			return getRuleContext(Start_stateContext.class,0);
		}
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public End_stateContext end_state() {
			return getRuleContext(End_stateContext.class,0);
		}
		public Aut_edgeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aut_edge; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AldebaranListener ) ((AldebaranListener)listener).enterAut_edge(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AldebaranListener ) ((AldebaranListener)listener).exitAut_edge(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AldebaranVisitor ) return ((AldebaranVisitor<? extends T>)visitor).visitAut_edge(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Aut_edgeContext aut_edge() throws RecognitionException {
		Aut_edgeContext _localctx = new Aut_edgeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_aut_edge);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(T__3);
			setState(40);
			start_state();
			setState(41);
			match(T__4);
			setState(42);
			label();
			setState(43);
			match(T__5);
			setState(44);
			end_state();
			setState(45);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Start_stateContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(AldebaranParser.NUMBER, 0); }
		public Start_stateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start_state; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AldebaranListener ) ((AldebaranListener)listener).enterStart_state(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AldebaranListener ) ((AldebaranListener)listener).exitStart_state(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AldebaranVisitor ) return ((AldebaranVisitor<? extends T>)visitor).visitStart_state(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Start_stateContext start_state() throws RecognitionException {
		Start_stateContext _localctx = new Start_stateContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_start_state);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(AldebaranParser.STRING, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AldebaranListener ) ((AldebaranListener)listener).enterLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AldebaranListener ) ((AldebaranListener)listener).exitLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AldebaranVisitor ) return ((AldebaranVisitor<? extends T>)visitor).visitLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_label);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class End_stateContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(AldebaranParser.NUMBER, 0); }
		public End_stateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_end_state; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AldebaranListener ) ((AldebaranListener)listener).enterEnd_state(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AldebaranListener ) ((AldebaranListener)listener).exitEnd_state(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AldebaranVisitor ) return ((AldebaranVisitor<? extends T>)visitor).visitEnd_state(this);
			else return visitor.visitChildren(this);
		}
	}

	public final End_stateContext end_state() throws RecognitionException {
		End_stateContext _localctx = new End_stateContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_end_state);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}